--- a/Makeup/src/main/res/layout/activity_makeup_details.xml
+++ b/Makeup/src/main/res/layout/activity_makeup_details.xml
@@ -16,12 +16,24 @@
             android:id="@+id/toolbar4"
             layout="@layout/tool_bar" />
 
+        <CheckBox
+            android:id="@+id/checkBox_favoriteDetails"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="end"
+            android:layout_marginTop="10dp"
+            android:layout_marginEnd="15dp"
+            android:layout_marginRight="15dp"
+            android:button="@null"
+            android:drawableEnd="@drawable/custom_icon_favorite"
+            android:drawableRight="@drawable/custom_icon_favorite"
+            android:padding="7dp" />
+
         <ImageView
             android:id="@+id/img_detailsProduct"
             android:layout_width="match_parent"
             android:layout_height="250dp"
             android:layout_marginLeft="35dp"
-            android:layout_marginTop="20dp"
             android:layout_marginRight="35dp"
             android:contentDescription="@string/description_imageProduct"
             android:scaleType="fitCenter"
@@ -34,10 +46,10 @@
             android:layout_marginLeft="30dp"
             android:layout_marginTop="20dp"
             android:layout_marginRight="30dp"
-            android:textSize="20sp"
             android:fontFamily="@font/ubuntu_bold"
             android:gravity="start"
-            android:text="@string/formatted_name" />
+            android:text="@string/formatted_name"
+            android:textSize="20sp" />
 
         <TextView
             android:id="@+id/txt_brandTypeProduct"
@@ -78,12 +90,12 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="start"
+            android:layout_marginStart="30dp"
             android:layout_marginLeft="30dp"
             android:layout_marginTop="20dp"
             android:fontFamily="@font/ubuntu_bold"
             android:text="@string/label_details"
-            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
-            android:layout_marginStart="30dp" />
+            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5" />
 
 
         <TextView
