Feature: Alteração na Tela Inicial, Menu Superior e Lateral

--- a/Makeup/src/main/res/layout/tool_bar.xml
+++ b/Makeup/src/main/res/layout/tool_bar.xml
@@ -11,4 +11,5 @@
     app:layout_collapseMode="pin"
     app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
     app:titleTextColor="@color/white_light"
+    app:menu="@menu/main_menu"
     tools:targetApi="lollipop" />
