--- a/Makeup/src/main/res/layout/layout_recycler_result.xml
+++ b/Makeup/src/main/res/layout/layout_recycler_result.xml
@@ -5,16 +5,13 @@
     android:id="@+id/cardView"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_gravity="center"
     android:layout_margin="7dp"
-    app:cardCornerRadius="15dp"
+    android:orientation="horizontal"
     app:cardElevation="3dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:orientation="vertical">
+        android:layout_height="wrap_content">
 
         <ImageView
             android:id="@+id/image_product"
@@ -31,6 +28,9 @@
             android:id="@+id/checkBox_favorite"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="2dp"
+            android:layout_marginEnd="2dp"
+            android:layout_marginRight="2dp"
             android:button="@null"
             android:drawableEnd="@drawable/custom_icon_favorite"
             android:drawableRight="@drawable/custom_icon_favorite"
@@ -38,46 +38,75 @@
             app:layout_constraintEnd_toEndOf="@id/image_product"
             app:layout_constraintTop_toTopOf="@id/image_product" />
 
+        <View
+            android:id="@+id/line_black"
+            android:layout_width="match_parent"
+            android:layout_height="0.5dp"
+            android:background="@color/grey"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/image_product" />
+
         <!--Utlizado Strings no XML p/ ter como parametro os dados apresentados-->
         <TextView
             android:id="@+id/txt_nameMakeup"
-            style="@style/TextAppearance.MaterialComponents.Headline6"
-            android:layout_width="0dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginLeft="8dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginRight="8dp"
-            android:fontFamily="@font/ubuntu_medium"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="5dp"
+            android:layout_marginRight="5dp"
+            android:fontFamily="@font/ubuntu_bold"
             android:gravity="center"
-            android:text="Lorem ipsilum Lor"
-            android:textSize="17sp"
+            android:text="Blush Kima Kl..."
+            android:textSize="20sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/image_product"
+            app:layout_constraintTop_toBottomOf="@id/line_black"
             tools:ignore="HardcodedText" />
-
 
         <TextView
             android:id="@+id/txt_priceMakeup"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginLeft="16dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginEnd="16dp"
-            android:layout_marginRight="16dp"
-            android:layout_marginBottom="15dp"
-            android:fontFamily="@font/ubuntu_bold"
+            android:layout_marginTop="5dp"
+            android:layout_marginEnd="5dp"
+            android:layout_marginRight="5dp"
             android:gravity="center"
             android:text="@string/formatted_currencyPrice"
-            android:textAppearance="?attr/textAppearanceBody1"
-            android:textSize="22sp"
-            app:layout_constraintBottom_toBottomOf="parent"
+            android:textSize="18sp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintStart_toStartOf="@+id/txt_nameMakeup"
             app:layout_constraintTop_toBottomOf="@+id/txt_nameMakeup" />
+
+        <View
+            android:id="@+id/line_black2"
+            android:layout_width="0dp"
+            android:layout_height="0.8dp"
+            android:layout_marginStart="5dp"
+            android:layout_marginLeft="5dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginEnd="5dp"
+            android:layout_marginRight="5dp"
+            android:background="@color/black"
+            app:layout_constraintEnd_toEndOf="@+id/txt_nameMakeup"
+            app:layout_constraintStart_toStartOf="@+id/txt_nameMakeup"
+            app:layout_constraintTop_toBottomOf="@+id/txt_priceMakeup" />
+
+        <Button
+            android:id="@+id/btn_viewProduct"
+            style="@style/Widget.MaterialComponents.Button.TextButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/btn_viewProduct"
+            android:textSize="12.5sp"
+            app:icon="@drawable/ic_keyboard_arrow_right"
+            app:iconGravity="end"
+            app:layout_constraintEnd_toEndOf="@+id/line_black2"
+            app:layout_constraintStart_toStartOf="@+id/line_black2"
+            app:layout_constraintTop_toBottomOf="@id/line_black2" />
+
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
