--- a/Makeup/src/main/res/layout/activity_main.xml
+++ b/Makeup/src/main/res/layout/activity_main.xml
@@ -20,10 +20,44 @@
             android:id="@+id/toolBar"
             layout="@layout/tool_bar" />
 
+        <LinearLayout
+            android:id="@+id/layout_loadingData"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:orientation="vertical"
+            android:visibility="gone">
+
+            <TextView
+                android:id="@+id/txt_titleLoading"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:layout_marginStart="10dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="20dp"
+                android:layout_marginEnd="10dp"
+                android:layout_marginRight="10dp"
+                android:fontFamily="@font/ubuntu_bold"
+                android:text="@string/loading_text"
+                android:textSize="20sp" />
+
+            <com.google.android.material.progressindicator.CircularProgressIndicator
+                android:id="@+id/progress_loading"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginTop="10dp"
+                android:foregroundGravity="center"
+                android:indeterminate="true" />
+        </LinearLayout>
+
+
         <FrameLayout
             android:id="@+id/frame_forFragment"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent"
+            android:visibility="visible" />
     </LinearLayout>
 
     <com.google.android.material.navigation.NavigationView
