--- a/Makeup/src/main/res/layout/layout_navigation_header.xml
+++ b/Makeup/src/main/res/layout/layout_navigation_header.xml
@@ -21,7 +21,7 @@
         tools:ignore="HardcodedText" />
 
     <TextView
-        android:id="@+id/txt_nicknameHeader"
+        android:id="@+id/text_nicknameHeader"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
